--- a/docs-service/src/main/resources/application.properties
+++ b/docs-service/src/main/resources/application.properties
@@ -1,1 +1,13 @@
 server.port=3003
+
+# Database Configuration
+spring.datasource.url=jdbc:postgresql://localhost:5432/docs_db
+spring.datasource.username=demo
+spring.datasource.password=demo123
+spring.datasource.driver-class-name=org.postgresql.Driver
+
+# JPA Configuration
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.properties.hibernate.format_sql=true
