--- a/groups-service/Dockerfile
+++ b/groups-service/Dockerfile
@@ -12,6 +12,7 @@ RUN apk --no-cache add ca-certificates
 WORKDIR /root/
 
 COPY --from=builder /app/main .
+COPY --from=builder /app/schema.sql .
 
 EXPOSE 3001
 CMD ["./main"]
